# sup

./: Cargo.toml  README.md
src/: aligned_series.rs  base.rs  cpu.rs  element.rs  lib.rs  metric.rs  ops.rs  raw_series.rs  sample.rs  series.rs  stat.rs  util.rs  window.rs  window_ops.rs
src/ops/: element.rs  mod.rs  sample.rs
