[package]
name = "sup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
chrono = "0.4.26"
derive_more = "0.99.17"
float-ord = "0.3.2"
num = "0.4.1"
num-traits = "0.2.16"
sysinfo = "0.29.7"
